--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,11 @@
 controllers:
     resource: ../src/Controller/
-    type: attribute
+    type: annotation
+
+kernel:
+    resource: ../src/Kernel.php
+    type: annotation
+
+dashboard:
+    path: /admin
+    controller : App\Controller\Admin\DashboardController::index
